--- a/frontend/portfolio-react-app/src/styles/Projects.scss
+++ b/frontend/portfolio-react-app/src/styles/Projects.scss
@@ -41,7 +41,7 @@
     }
   }
 
-  &__filter-btn {
+  &__filter-link {
     position: relative;
     font-family: base.$ruda-regular;
     font-size: 1.25rem;
@@ -101,7 +101,7 @@
       margin: 0.5rem 0.5rem 8rem 0.5rem;
     }
 
-    &__filter-btn {
+    &__filter-link {
       font-size: 1.375rem;
     }
   }
@@ -138,7 +138,7 @@
       margin-bottom: 3rem;
     }
 
-    &__filter-btn {
+    &__filter-link {
       font-size: 1.5rem;
     }
   }
@@ -148,7 +148,7 @@
 
 body.theme-dark {
   .projects {
-    &__filter-btn {
+    &__filter-link {
       color: base.$green-color;
 
       &:hover, &:focus-visible {
