--- a/backend/portfolio/templates/portfolio/base.html
+++ b/backend/portfolio/templates/portfolio/base.html
@@ -9,6 +9,7 @@
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="robots" content="all">
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'portfolio/icons/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'portfolio/icons/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'portfolio/icons/favicon-16x16.png' %}">
@@ -16,10 +17,11 @@
     <link rel="icon" href="{% static 'portfolio/icons/favicon.ico' %}" type="image/x-icon">
     <link rel="manifest" href="{% static 'portfolio/site.webmanifest' %}">
 
+
     <title>{% block title %}Clément Floret | Portfolio{% endblock %}</title>
     <meta name="description" content="{% block description %}{% translate 'meta_description' %}{% endblock %}"/>
-  <script type="module" crossorigin src="{% static 'portfolio/js/index-CXBIPS5r.js' %}"></script>
-  <link rel="stylesheet" crossorigin href="{% static 'portfolio/css/index-OMm9ylld.css' %}">
+  <script type="module" crossorigin src="{% static 'portfolio/js/index-CI3aUKQl.js' %}"></script>
+  <link rel="stylesheet" crossorigin href="{% static 'portfolio/css/index-lOOroYdB.css' %}">
     {% block meta %}{% endblock %}
 </head>
 <body>
