--- a/frontend/portfolio-react-app/src/fonts.css
+++ b/frontend/portfolio-react-app/src/fonts.css
@@ -4,6 +4,7 @@
   url('static/fonts/Ruda-Regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: auto;
 }
 
 @font-face {
@@ -12,6 +13,7 @@
   url('static/fonts/Ruda-Bold-webfont.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+  font-display: auto;
 }
 
 @font-face {
@@ -21,6 +23,7 @@
   url('static/fonts/Karla-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: auto;
 }
 
 @font-face {
@@ -30,6 +33,7 @@
   url('static/fonts/Karla-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
+  font-display: auto;
 }
 
 @font-face {
@@ -39,4 +43,5 @@
   url('static/fonts/duru-sans-latin-400-normal.woff') format('woff');
   font-weight: normal;
   font-style: normal;
+  font-display: auto;
 }
