add lang FR,EN to menu header add lang alternate link to index.html

--- a/backend/portfolio/templates/portfolio/base.html
+++ b/backend/portfolio/templates/portfolio/base.html
@@ -10,6 +10,8 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="robots" content="all">
+    <link rel="alternate" hreflang="fr" href="https://clementfloret.dev/fr/" />
+    <link rel="alternate" hreflang="en" href="https://clementfloret.dev/" />
     <link rel="apple-touch-icon" sizes="180x180" href="{% static 'portfolio/icons/apple-touch-icon.png' %}">
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'portfolio/icons/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'portfolio/icons/favicon-16x16.png' %}">
@@ -20,7 +22,7 @@
 
     <title>{% block title %}Clément Floret | Portfolio{% endblock %}</title>
     <meta name="description" content="{% block description %}{% translate 'meta_description' %}{% endblock %}"/>
-  <script type="module" crossorigin src="{% static 'portfolio/js/index-CI3aUKQl.js' %}"></script>
+  <script type="module" crossorigin src="{% static 'portfolio/js/index-ClqbGlL6.js' %}"></script>
   <link rel="stylesheet" crossorigin href="{% static 'portfolio/css/index-lOOroYdB.css' %}">
     {% block meta %}{% endblock %}
 </head>
