--- a/frontend/portfolio-react-app/src/styles/Projects.scss
+++ b/frontend/portfolio-react-app/src/styles/Projects.scss
@@ -21,8 +21,8 @@
 
   &__filters {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 0.25rem;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 2rem 0.25rem;
     justify-items: center;
     align-content: center;
     margin: 0.5rem 0 1rem 0;
