--- a/frontend/portfolio-react-app/src/styles/Home.scss
+++ b/frontend/portfolio-react-app/src/styles/Home.scss
@@ -13,8 +13,12 @@
 
   &__title {
     font-family: base.$karla-bold;
-    font-size: 2.25rem;
+    font-size: 1.25rem;
     margin: 1.5rem 1rem;
+
+    strong {
+      font-size: 2.25rem;
+    }
   }
 
   &__subtitle {
@@ -35,7 +39,9 @@
 @media all and (min-width: base.$small) {
   .home {
     &__title {
-      font-size: 2.5rem;
+      strong{
+        font-size: 2.5rem;
+      }
     }
   }
 }
@@ -47,7 +53,9 @@
     max-width: 38rem;
 
     &__title {
-      font-size: 2.75rem;
+      strong {
+        font-size: 2.75rem;
+      }
     }
   }
 }
@@ -58,7 +66,10 @@
   .home {
     max-width: 42rem;
     &__title {
-      font-size: 3rem;
+      font-size: 1.5rem;
+      strong {
+        font-size: 3rem;
+      }
     }
 
     &__subtitle {
@@ -73,7 +84,9 @@
   .home {
     max-width: 48rem;
     &__title {
-      font-size: 3.5rem;
+      strong {
+        font-size: 3.5rem;
+      }
     }
 
     &__subtitle {
