--- a/frontend/portfolio-react-app/src/styles/Carousel.scss
+++ b/frontend/portfolio-react-app/src/styles/Carousel.scss
@@ -36,6 +36,7 @@
     border-radius: 50%;
     transition: all 0.2s ease-in;
     z-index: 50;
+    cursor: pointer;
 
     &:hover, &:focus-visible {
       background-color: base.$purple-color;
